--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,16 @@
+@font-face {
+    font-family: 'Poppins';
+    src: url('../fonts/Poppins-Regular.eot');
+    src: url('../fonts/Poppins-Regular.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Poppins-Regular.woff2') format('woff2'),
+    url('../fonts/Poppins-Regular.woff') format('woff'),
+    url('../fonts/Poppins-Regular.ttf') format('truetype'),
+    url('../fonts/Poppins-Regular.svg#Poppins-Regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
 *{
     padding: 0;
     margin: 0;
@@ -9,7 +22,7 @@ header {
 }
 
 header div {
-    max-width: 1200px;
+    max-width: 1150px;
     margin: auto;
     display: flex;
     justify-content: space-between;
@@ -27,6 +40,7 @@ header ul {
 }
 
 header nav li a {
+    font-family: 'Poppins';
     padding-top: 11px;
     font-size: 13px;
     color: #FFFFFF;
@@ -53,6 +67,7 @@ header ul li:last-of-type {
 
 
 header ul li:last-of-type a {
+    font-family: 'Poppins';
     padding: 9px 20px 13px 20px;
     text-decoration: none;
     font-size: 16px;
@@ -62,45 +77,68 @@ header ul li:last-of-type a {
     display: inline-block;
 }
 
-.container {
-    background-color: #ECE7E4;
-    box-sizing: border-box;
-    padding-top: 461px;
-    padding-bottom: 71px;
+.main_banner {
     background-image: url('../images/background.jpg');
     background-position: center;
-    background-repeat: no-repeat;
-    background-color:  black;
+    background-size: cover;
+    height: 100vh;
 }
 
-.container div {
+.container_1 {
     max-width: 580px;
-    text-align: center;
     margin: auto;
-
-
+    box-sizing: border-box;
+    padding-top: 461px;
 }
 
-.container div h2 {
+.container_1 h2 {
+    font-family: 'Poppins';
     font-size: 14px;
     line-height: 20px;
-    text-align: center;
     letter-spacing: 2px;
+    text-align: center;
     text-transform: uppercase;
     color: #C0C0C0;
 }
 
-.container h1 {
+.container_1 h1 {
+    font-family: 'Poppins';
     font-size: 54px;
     line-height: 59px;
     text-align: center;
     color: #FFFFFF;
 }
 
-.container div p {
+.container_1 p {
+    font-family: 'Poppins';
     font-size: 14px;
     line-height: 20px;
     text-align: center;
     color: #C0C0C0;
     margin-top: 18px;
+}
+
+.fixed_information {
+    position: absolute;
+    bottom: 41px;
+    right: 40px;
+}
+
+.fixed_information li {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    color: #FFFFFF;
+    display: inline-flex;
+    margin-left: 16px;
+}
+
+.fixed_information li:before {
+    content: "";
+    background-image: url("../images/ico_1.svg");
+    width: 16px;
+    height: 16px;
+    display: block;
+    margin-right: 6px;
 }
