--- a/CSS/style.css
+++ b/CSS/style.css
@@ -83,12 +83,15 @@ header ul li:last-of-type a {
     background-size: cover;
     height: 100vh;
     box-sizing: border-box;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    padding-bottom: 71px;
 }
 
 .container_1 {
     max-width: 580px;
-    margin: auto;
-    padding-top: 461px;
 }
 
 .container_1 h3 {
@@ -170,6 +173,82 @@ header ul li:last-of-type a {
     margin-right: 5px;
 }
 
+.overview_banner_1 {
+    background-image: url("../images/background_2.jpg");
+    background-position: center;
+    background-size: cover;
+    height: 100vh;
+    min-height: 60vh;
+    box-sizing: border-box;
+    position: relative;
+    display: flex;
+    justify-content: flex-end ;
+    align-items: center;
+    padding-right: 64px;
+}
+
+.overview_container_1 {
+    max-width: 298px;
+}
+
+.overview_container_1 h3 {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+
+.overview_container_1 p {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    color: #C0C0C0;
+}
+
+.overview_banner_2{
+    background-image: url("../images/background_3.jpg");
+    background-position: center;
+    background-size: cover;
+    height: 100vh;
+    min-height: 60vh;
+    box-sizing: border-box;
+    position: relative;
+    display: flex;
+    justify-content: flex-end ;
+    align-items: center;
+    padding-right: 87px;
+}
+
+.overview_container_2 {
+    max-width: 273px;
+}
+
+.overview_container_2 h3 {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+
+.overview_container_2 p {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    color: #C0C0C0;
+}
+
 .past_clients_banner {
     padding: 113px 0 140px 0;
     background-color: black;
@@ -203,4 +282,103 @@ header ul li:last-of-type a {
     align-items: center;
     justify-content: space-between;
     padding-top: 82px;
+}
+
+.overview_banner_3 {
+    background-image: url("../images/background_4.jpg");
+    background-position: center;
+    background-size: cover;
+    height: 100vh;
+    min-height: 60vh;
+    box-sizing: border-box;
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding-right: 119px;
+}
+
+.overview_container_3 {
+    max-width: 241px;
+}
+
+.overview_container_3 h3 {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+
+.overview_container_3 p {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    color: #C0C0C0;
+}
+
+.pre_footer {
+    background-color: black;
+    padding: 113px 0 108px 0;
+    display: flex;
+}
+
+.pre_footer_container {
+    max-width: 571px;
+    margin: auto;
+
+}
+
+.pre_footer_container h2 {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 42px;
+    text-align: center;
+    color: #FFFFFF;
+}
+
+.pre_footer_container h3 {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 30px;
+    text-align: center;
+    color: #C0C0C0;
+
+}
+
+
+.pre_footer_container a {
+    padding: 9px 0 13px 0;
+    background-color: #FFFFFF;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    text-align: center;
+    letter-spacing: 0.4px;
+    color: #000000;
+    border-radius: 14px;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.pre_footer_container a:before {
+    content: "";
+    background-color: black;
+    height: 21px;
+    width: 21px;
+    border-radius: 50%;
+    margin: 0 4px 0 4px;
 }
