--- a/CSS/media.css
+++ b/CSS/media.css
@@ -39,6 +39,7 @@
 
 @media screen and (max-width: 1024px) {
 
+
     header ul li {
         margin-left: 10px;
     }
@@ -49,6 +50,7 @@
         transform: translateX(100%);
         background: rgba(0, 0, 0, 0.45);
         backdrop-filter: blur(20px);
+        top: 0px;
     }
     nav .nav-links li {
         opacity: 0;
@@ -60,18 +62,19 @@
 
     nav .nav-links {
         display: block;
+        right: 0;
     }
 
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1025px) {
     nav {
         position: absolute;
     }
     nav .nav-links {
         position: absolute;
-        top: 10px;
-        right: 450px;
+        top: 15px;
+        right: 600px;
     }
 
     header ul li a {
@@ -89,21 +92,33 @@
     }
 
     header ul li:nth-child(2) a {
-        width: 150px;
+        width: 180px;
     }
 
-    header ul li {
-        margin-left: 32px;
+    header ul li:nth-child(3) a {
+        width: 112px;
     }
 
     header ul li:nth-child(2) {
         margin-left: 56px;
     }
 
+    header ul li:nth-child(3) {
+        margin-left: 32px;
+    }
+
+    header ul li:nth-child(4) {
+        margin-left: 32px;
+    }
+
     header ul li:last-of-type {
         margin-left: 31px;
     }
 
+    nav .nav-links .hover-el {
+        display: none;
+    }
 
 }
+
 
