--- a/CSS/media.css
+++ b/CSS/media.css
@@ -1,44 +1,4 @@
-@media screen and (max-width: 992px) {
-    header {
-        padding: 24px 15px;
-    }
-    .what_we_do .d-flex {
-        justify-content: center;
-    }
-}
-
-@media screen and (max-width: 768px) {
-
-}
-
-@media screen and (max-width: 767px) {
-    .main_banner {
-        height: 75vh;
-    }
-    .footer_row_2 {
-        display: block;
-    }
-    .past_clients_container {
-        flex-direction: column;
-    }
-
-}
-
-@media screen and (max-width: 428px) {
-    .what_we_do .d-flex {
-        padding-right: 15px;
-        padding-left: 15px;
-    }
-    nav {
-        width: 100%;
-    }
-    nav.nav-open .menu-btn {
-        left: 80%;
-    }
-}
-
 @media screen and (max-width: 1024px) {
-
 
     header ul li {
         margin-left: 10px;
@@ -62,9 +22,14 @@
 
     nav .nav-links {
         display: block;
-        right: 0;
     }
 
+}
+
+@media screen and (min-width: 1300px) {
+    nav .nav-links {
+        right: 500px;
+    }
 }
 
 @media screen and (min-width: 1025px) {
@@ -103,6 +68,7 @@
         margin-left: 56px;
     }
 
+
     header ul li:nth-child(3) {
         margin-left: 32px;
     }
@@ -120,5 +86,7 @@
     }
 
 }
+
+
 
 
